--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 	<head>
 		<meta charset="UTF-8" />
-		<title>14.6. React - stan i cykle zycia komponentu</title>
+		<title>14.6. React: stan i cykle życia komponentu</title>
 		<link rel="stylesheet" href="css/style.css">
   	</head>
   	<body>
